...
        additionalNumber = 0
        numberOfScanned = 0

        inventoryResult.values.toMutableStateList().forEach {
            if (it.inventoryConflictType == "کسری") {
                shortagesNumber += it.inventoryConflictAbs
            } else if (it.inventoryConflictType == "اضافی") {
                additionalNumber += it.inventoryConflictAbs
            }
            numberOfScanned += it.scannedNumber
        }

        val shortageAndAdditional = inventoryResult.filter { it1 ->
...
                    }
                }
            } else if (keyCode == 4) {
                if (isInShortageAdditionalPage) {
                    isInShortageAdditionalPage = false
                } else {
                    back()
                }
            } else if (keyCode == 139) {
                stopRFScan()
            }
        }
        return true
...

        saveInventoryDataConfirm(queue, state, saveToServerId, {
            inventoryStarted = false
            inputBarcodes.clear()
            inputProducts.clear()
            inputBarcodeMapWithProperties.clear()
            clear()
            lastInventoryTime = System.currentTimeMillis()
            saveToMemory()
            loading = false
        }, {
            if (it is TimeoutError) {
                inventoryStarted = false
...
                            .padding(start = 24.dp)
                            .fillMaxWidth()
                            .height(48.dp),
                            onClick = {
                                isInShortageAdditionalPage = true
                            }) {
                            Text(text = "مغایرت ها", style = Typography.h2)
                        }
                    }
                    Button(modifier = Modifier
                        .padding(start = 24.dp, end = 24.dp, bottom = 16.dp)
                        .fillMaxWidth()
                        .height(48.dp),
...
                                checkServerIsReady()
                            } else {
                                openFinishDialog = true
                            }
                        }) {
                        Text(
                            text = if (inventoryStarted) "پایان انبارگردانی" else "شروع انبارگردانی",
                            style = Typography.h2
                        )
                    }
                }
            }
        }
...
                    }) {
                    Text(text = "تعریف ناحیه جستجو")
                }

                LazyColumn(modifier = Modifier.padding(top = 8.dp, bottom = 56.dp)) {

                    items(uiList.size) { i ->

                        Item(
                            i,
                            uiList,
                            text3 = "موجودی: " + uiList[i].inventoryNumber,
                            text4 = uiList[i].inventoryConflictType + ":" + " " + uiList[i].inventoryConflictAbs,
...

                        Button(onClick = {
                            openClearDialog = false
                            clear()

                        }, modifier = Modifier.padding(top = 10.dp, end = 20.dp)) {
                            Text(text = "بله")
                        }
                        Button(
                            onClick = { openClearDialog = false },
                            modifier = Modifier.padding(top = 10.dp)
                        ) {
                            Text(text = "خیر")
...
                                inputProducts.clear()
                                inputBarcodeMapWithProperties.clear()
                                clear()
                            },
                            modifier = Modifier.padding(top = 10.dp)
                        ) {
                            Text(text = "خیر، نتایج پاک شوند")
                        }
                    }
                }
            }
        )
    }
...
                        openStartOrContinueDialog = false
                        inventoryStarted = true
                        clear()
                        getWarehouseBarcodes()

                    }, modifier = Modifier.padding(top = 10.dp)) {
                        Text(text = "ادامه انبارگردانی قبلی")
                    }
                    Button(
                        onClick = {
                            openStartOrContinueDialog = false
                            finishPackage()
                        },
                        modifier = Modifier.padding(top = 10.dp)
                    ) {
                        Text(text = "شروع انبارگردانی جدید")
                    }
                }
            }
        )
    }

...
            mutableStateOf(false)
        }

        Box {
            Row(modifier = Modifier
                .clickable { expanded = true }
                .testTag("scanFilterDropDownList")
            ) {
                Text(text = scanFilter)
                Icon(imageVector = Icons.Filled.ArrowDropDown, "")
            }

            DropdownMenu(
...
