...
            "59" to "مشهد سجاد",
            "60" to "تهران جردن",
            "61" to "قم بازار شهر",
            "64" to "انبار (ضايعات)",
            "66" to "تهران سانا",
            "67" to "تهران شميران",
            "68" to "تهران مگامال 2",
            "69" to "تهران سيوان",
            "70" to "كرج اكومال",
            "71" to "تهران ايران مال 1",
            "73" to "تهران اپال",
            "74" to "تبريز لاله پارك",
            "75" to "اروميه سيتاديوم",
...
